<resources>
    <string name="app_name">Jian Zuo</string>
    <string name="I_know">Acknowledged</string>
    <string name="add">Add</string>
    <string name="add_device">Add Device</string>
    <string name="ap_direct">AP Connect</string>
    <string name="ap_instruction">Please connect your phone to Wi-FI named \\"INKSI-01_XXXX\\", then return to the APP</string>
    <string name="ap_instructions">\t\tPlease be advised when using the AP direct connection mode, some models of mobile phones will not be able to connect to the Internet. This problem is caused by system settings from different phone manufacturers, and some internal functions requires network connection in INKSI APP will be disabled.</string>
    <string name="ble_connect">Direct Connect</string>
    <string name="bluetooth_reject">Bluetooth permission denied</string>
    <string name="btn_config_wifi">Setup Device</string>
    <string name="btn_disconnect">disconnect</string>
    <string name="chinese">中文</string>
    <string name="common_permission_access_media_location">Access Media Location Permission</string>
    <string name="common_permission_activity_recognition_api29">Fitness Activity Permission</string>
    <string name="common_permission_activity_recognition_api30">Physical Activity Permission</string>
    <string name="common_permission_alarms_reminders">Alarms and Reminders Permission</string>
    <string name="common_permission_alert">Permission Alert</string>
    <string name="common_permission_all_file_access">All Files Access Permission</string>
    <string name="common_permission_allow_notifications">Notification Permission</string>
    <string name="common_permission_allow_notifications_access">Notification Access Permission</string>
    <string name="common_permission_apps_with_usage_access">Usage Access Permission</string>
    <string name="common_permission_background_default_option_label">Always Allow</string>
    <string name="common_permission_background_location_fail_hint">Failed to obtain background location permission,\nplease select %s option</string>
    <string name="common_permission_background_sensors_fail_hint">Failed to obtain background sensor permission,\nplease select %s option</string>
    <string name="common_permission_body_sensors">Body Sensors Permission</string>
    <string name="common_permission_body_sensors_background">Background Body Sensors Permission</string>
    <string name="common_permission_calendar">Calendar Permission</string>
    <string name="common_permission_call_logs">Call Logs Permission</string>
    <string name="common_permission_camera">Camera Permission</string>
    <string name="common_permission_colon">:</string>
    <string name="common_permission_comma">,</string>
    <string name="common_permission_contacts">Contacts Permission</string>
    <string name="common_permission_denied">Cancel</string>
    <string name="common_permission_description_title">Permission Description</string>
    <string name="common_permission_display_over_other_apps">Display Over Other Apps Permission</string>
    <string name="common_permission_do_not_disturb_access">Do Not Disturb Permission</string>
    <string name="common_permission_fail_assign_hint">Permission failed, please grant %s permission</string>
    <string name="common_permission_fail_hint">Permission failed, please grant the correct permission</string>
    <string name="common_permission_get_installed_apps">Get Installed Apps Permission</string>
    <string name="common_permission_goto_setting_page">Go to grant</string>
    <string name="common_permission_granted">Access</string>
    <string name="common_permission_ignore_battery_optimize">Ignore Battery Optimization Permission</string>
    <string name="common_permission_image_and_video">Image and Video Permission</string>
    <string name="common_permission_install_unknown_apps">Install Unknown Apps Permission</string>
    <string name="common_permission_location">Location Permission</string>
    <string name="common_permission_location_background">Background Location Permission</string>
    <string name="common_permission_manual_assign_fail_background_location_hint">Failed to obtain background location permission, please select %s in location permission</string>
    <string name="common_permission_manual_assign_fail_background_sensors_hint">Failed to obtain background sensor permission, please select %s in sensor permission</string>
    <string name="common_permission_manual_assign_fail_hint">Failed to obtain permission, please manually grant %s</string>
    <string name="common_permission_manual_fail_hint">Failed to obtain permission, please manually grant the permission</string>
    <string name="common_permission_media_location_hint_fail">Failed to obtain media location permission,\nplease clear app data and try again</string>
    <string name="common_permission_microphone">Microphone Permission</string>
    <string name="common_permission_modify_system_settings">Modify System Settings Permission</string>
    <string name="common_permission_music_and_audio">Music and Audio Permission</string>
    <string name="common_permission_nearby_devices">Nearby Devices Permission</string>
    <string name="common_permission_phone">Phone Permission</string>
    <string name="common_permission_picture_in_picture">Picture-in-Picture Permission</string>
    <string name="common_permission_post_notifications">Post Notifications Permission</string>
    <string name="common_permission_sms">SMS Permission</string>
    <string name="common_permission_storage">Storage Permission</string>
    <string name="common_permission_unknown">Permission</string>
    <string name="common_permission_vpn">VPN Permission</string>
    <string name="config_fail">Configuration Failed</string>
    <string name="config_fail_tips">1. Please reconfirm that the name and password of the Wi-Fi/hotspot you want to configure are correct;
2. Please reconfirm that the frequency band of your Wi-Fi/hotspot is 2.4GHz;
3. If you still cannot configure network successful, please contact INKSI customer service for help.</string>
    <string name="config_successful">Configuration Successful</string>
    <string name="config_timeout">Configuration Timeout</string>
    <string name="config_wifi">Network Setup</string>
    <string name="connect_fail">Connection Failed</string>
    <string name="connect_success">Connection Successful</string>
    <string name="syncing_data">Syncing data…</string>
    <string name="syncing_complete">Syncing Complete</string>
    <string name="connect_timeout">Connection timed out</string>
    <string name="connecting">Connecting</string>
    <string name="copy_success">File Duplicated</string>
    <string name="custom_dialog_cancel">Cancel</string>
    <string name="custom_dialog_ok">OK</string>
    <string name="disconnect">Disconnected</string>
    <string name="disconnect_ap">To disconnect printer under AP mode, please go to System Setting and disconnect to the Wi-Fi hotspot.</string>
    <string name="disconnect_first">Please disconnect the device first before connecting to new device.</string>
    <string name="english">English</string>
    <string name="go_wifi_setting">Go to Wi-Fi settings</string>
    <string name="instructions">What for?</string>
    <string name="japanese">日本語</string>
    <string name="korea">한국어</string>
    <string name="loading">Scanning…</string>
    <string name="locationPermission_wifi">The location service is not turned on, the WIFI device may not be found, please turn on the location service!</string>
    <string name="next_step">Next Step</string>
    <string name="no_tip_next_time">\tDo not prompt next time</string>
    <string name="ota_version_check">Check Firmware Update</string>
    <string name="permissionPosition">Location permission description 
 Used for discovering Bluetooth, connecting Bluetooth, Ap connection and other scenarios</string>
    <string name="pull_to_refresh_list">Pull down to rescan</string>
    <string name="ru">Русский</string>
    <string name="start_config">Start Configuration</string>
    <string name="start_config_toast">Configuring, please keep your mobile phone close to the device and do not operate or turn off the device.</string>
    <string name="title_ap">AP connection guide</string>
    <string name="turnOnBluetoothHint">Bluetooth is not turned on, please turn on Bluetooth</string>
    <string name="wifi_configuration">Wi-Fi Config</string>
    <string name="wifi_connect">Wi-Fi Connect</string>
    <string name="wifi_name">WIFI Name</string>
    <string name="wifi_pwd">Password</string>
    <string name="wifi_pwd_hint">Enter WIFI password</string>
    <string name="common_permission_activity_recognition_api">Activity Recognition Permission</string>
    <string name="config_wifi1">The purpose of this function is to configure the printer device to the wireless network you are in. After successful network configuration, the printer will automatically connect to the Wi Fi network the next time it is turned on; In a network free environment, you can also configure the printer device to be used in your phone\'s hotspot.</string>
    <string name="config_wifi2">Attention: The printer device only supports wireless networks in the 2.4GHz frequency band. Please confirm that the Wi-Fi or phone hotspot setting for your distribution network is 2.4GHz, otherwise it will cause network failure.</string>
    <string name="config_wifi3">How can I determine my Wi Fi/mobile hotspot frequency band?</string>
    <string name="default_font">Default Font</string>
    <string name="start_config_toast2">Currently being connected to the network, please keep your phone as close to the device as possible. Do not operate or turn off the device, and do not exit the current app.\n\nIn the distribution network</string>
    <string name="step">Step</string>
    <string name="step2_tip">Enter the Wi Fi name and password to be connected to the network, please ensure that your phone is currently connected to the same Wi Fi.</string>
<string name="menu_language">Language</string>
    <string name="menu_about">About</string>
    <string name="select_language">Select Language</string>
<string name="preview">Preview</string>
    <string name="print">Print</string>
    <string name="about_message">Jian Zuo\nVersion: %s\n\nSchool homework printing app.</string>
    <string name="back">Back</string>
<string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_select_all">Select All</string>
    <string name="dialog_clear">Clear</string>
    <string name="dialog_close">Close</string>
<string name="label_mac_address">MAC Address</string>
<string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
<string name="msg_printing">Sending...</string>
    <string name="msg_print_success">Send complete</string>
    <string name="title_print_failed">Print Failed</string>
    <string name="title_notice">Notice</string>
    <string name="msg_connect_printer_first">Please connect to printer first</string>
    <string name="btn_go_connect">Connect</string>
    <string name="print_setting_odd_left">Odd pages on left</string>
    <string name="print_setting_direction_btot">Bottom to top</string>
    <string name="print_setting_odd_right_default">Odd pages on right (default)</string>
    <string name="print_setting_direction_ttob_default">Top to bottom (default)</string>
    <string name="print_setting_book_layout">Book Layout</string>
    <string name="print_setting_book_layout_desc">Set whether odd pages are on the left or right side</string>
    <string name="print_setting_direction_title">Print Direction</string>
    <string name="print_setting_direction_desc">Set the slide direction for each page side</string>
    <string name="print_setting_left_page">Left Page</string>
    <string name="print_setting_right_page">Right Page</string>
</resources>