<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	<TextView
		android:paddingTop="18dp"
		android:paddingBottom="@dimen/dimen_10dp"
		android:layout_width="match_parent"
		android:textStyle="bold"
		android:layout_height="wrap_content"
		android:text="@string/instructions"
		android:textColor="@color/text_primary"
		android:textSize="16sp"
		android:gravity="center"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_gravity="center"
		android:layout_height="wrap_content">
		
		<TextView
			android:layout_marginLeft="@dimen/dimen_25dp"
			android:layout_marginRight="@dimen/dimen_25dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ap_instructions"
			android:textColor="@color/text_secondary"
			android:textSize="14sp"/>
		
		<CheckBox
			android:id="@+id/cb"
			android:layout_width="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:textColor="@color/text_primary"
			android:button="@drawable/checkbox_rect_bg"
			android:layout_marginLeft="@dimen/dimen_25dp"
			android:text="@string/no_tip_next_time"/>
		
	</LinearLayout>
	
	
	
	<View android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginLeft="@dimen/dimen_10dp"
		android:layout_marginRight="@dimen/dimen_10dp"
		android:layout_marginTop="@dimen/dimen_10dp"
		android:background="?attr/divider_color"/>
	<TextView
		android:id="@+id/tvKnow"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/I_know"
		android:paddingTop="@dimen/dimen_12dp"
		android:paddingBottom="@dimen/dimen_12dp"
		android:textColor="?attr/app_normal_color"
		android:textSize="16sp"
		/>
</LinearLayout>
